炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs


		[DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetSelDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XMonthCal_GetSelDate (int hEle,int pnYear,int pnMonth,int pnDay);

		[DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XMonthCal_GetButton (int hEle,int nType);

		[DllImport("xcgui.dll", EntryPoint = "XC_InitJS", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_InitJS ();

		[DllImport("xcgui.dll", EntryPoint = "XC_ExitJS", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_ExitJS ();

		[DllImport("xcgui.dll", EntryPoint = "XC_RunJS", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_RunJS (string pJsFile);

		[DllImport("xcgui.dll", EntryPoint = "XC_InitLua", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_InitLua ();

		[DllImport("xcgui.dll", EntryPoint = "XC_RunLua", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_RunLua (string pLuaFile);

		[DllImport("xcgui.dll", EntryPoint = "XC_ExitLua", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_ExitLua ();

		[DllImport("xcgui.dll", EntryPoint = "XC_UnicodeToAnsi", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_UnicodeToAnsi (string pIn,int inLen,string pOut,int outLen);

		[DllImport("xcgui.dll", EntryPoint = "XC_AnsiToUnicode", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_AnsiToUnicode (string pIn,int inLen,string pOut,int outLen);

		[DllImport("xcgui.dll", EntryPoint = "XC_itoa", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_itoa (int nValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_itow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_itow (int nValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_ftoa", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_ftoa (float fValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_ftow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_ftow (float fValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_atow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_atow (string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_wtoa", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_wtoa (string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_utf8tow", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_utf8tow (string pUtf8);

		[DllImport("xcgui.dll", EntryPoint = "XC_utf8towEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_utf8towEx (string pUtf8,int length);

		[DllImport("xcgui.dll", EntryPoint = "XC_atoutf8", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_atoutf8 (string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_DebugToFileInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_DebugToFileInfo (string pInfo);

		[DllImport("xcgui.dll", EntryPoint = "XC_IsHELE", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_IsHELE (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XC_IsHWINDOW", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_IsHWINDOW (int hWindow);

		[DllImport("xcgui.dll", EntryPoint = "XC_IsShape", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_IsShape (int hShape);

		[DllImport("xcgui.dll", EntryPoint = "XC_IsHXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_IsHXCGUI (int hXCGUI,int nType);

		[DllImport("xcgui.dll", EntryPoint = "XC_hWindowFromHWnd", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_hWindowFromHWnd (int hWnd);

		[DllImport("xcgui.dll", EntryPoint = "XC_SetProperty", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_SetProperty (int hXCGUI,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetProperty", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern string XC_GetProperty (int hXCGUI,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XC_RegisterWindowClassName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_RegisterWindowClassName (string pClassName);

		[DllImport("xcgui.dll", EntryPoint = "XC_IsSViewExtend", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_IsSViewExtend (int hEle);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetObjectType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_GetObjectType (int hXCGUI);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_GetObjectByID (int hWindow,int nID);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByIDName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_GetObjectByIDName (int hWindow,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByUID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_GetObjectByUID (int nUID);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByUIDName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_GetObjectByUIDName (string pName);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_GetObjectByName (string pName);

		[DllImport("xcgui.dll", EntryPoint = "XC_SetPaintFrequency", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_SetPaintFrequency (int nMilliseconds);

		[DllImport("xcgui.dll", EntryPoint = "XC_SetTextRenderingHint", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_SetTextRenderingHint (int nType);

		[DllImport("xcgui.dll", EntryPoint = "XC_RectInRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_RectInRect (RECT* pRect1,RECT* pRect2);

		[DllImport("xcgui.dll", EntryPoint = "XC_CombineRect", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_CombineRect (RECT* pDest,RECT* pSrc1,RECT* pSrc2);

		[DllImport("xcgui.dll", EntryPoint = "XC_ShowLayoutFrame", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_ShowLayoutFrame (bool bShow);

		[DllImport("xcgui.dll", EntryPoint = "XC_EnableDebugFile", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_EnableDebugFile (bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XC_EnableResMonitor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_EnableResMonitor (bool bEnable);

		[DllImport("xcgui.dll", EntryPoint = "XC_SetLayoutFrameColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_SetLayoutFrameColor (int color);

		[DllImport("xcgui.dll", EntryPoint = "XC_EnableErrorMessageBox", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_EnableErrorMessageBox (bool bEnabel);

		[DllImport("xcgui.dll", EntryPoint = "XC_EnableAutoExitApp", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_EnableAutoExitApp (bool bEnabel);

		[DllImport("xcgui.dll", EntryPoint = "XC_LoadLayout", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_LoadLayout (string pFileName,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "XC_LoadLayoutZip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_LoadLayoutZip (string pZipFileName,string pFileName,string pPassword,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "XC_LoadLayoutFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_LoadLayoutFromString (string pStringXML,int hParent);

		[DllImport("xcgui.dll", EntryPoint = "XC_LoadResource", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_LoadResource (string pFileName,string pDir);

		[DllImport("xcgui.dll", EntryPoint = "XC_LoadResourceZip", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_LoadResourceZip (string pZipFileName,string pFileName,string pPassword);

		[DllImport("xcgui.dll", EntryPoint = "XC_LoadResourceFromString", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_LoadResourceFromString (string pStringXML,string pFileName,string pDir);

		[DllImport("xcgui.dll", EntryPoint = "XC_LoadStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XC_LoadStyle (string pFileName,string pDir);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetTextSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_GetTextSize (string pString,int length,int hFontX,SIZE* pOutSize);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetTextShowSize", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_GetTextShowSize (string pString,int length,int hFontX,SIZE* pOutSize);

		[DllImport("xcgui.dll", EntryPoint = "XC_GetDefaultFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XC_GetDefaultFont ();

		[DllImport("xcgui.dll", EntryPoint = "XC_SetDefaultFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XC_SetDefaultFont (int hFontX);
